# lichess_bot_rust

./: Cargo.toml  README.md
sample_payloads/: game_stream.gameFull.json  game_stream.gameState.json
src/: chess.rs  chess_bitboard.rs  main.rs
src/chess/: game.rs
src/chess_bitboard/: game.rs
src/chess_orig/: game_orig.rs
