[package]
name = "lichess_bot_rust"
version = "0.1.0"
authors = ["sean <pulpfictionost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
native-tls = "0.2.7"
serde_json = "1.0"
bufstream = "0.1.4"
reqwest = "0.11.0"
colored = "2.0.0"
